<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_myvouchers"
            android:icon="@drawable/myaddress"
            android:title="@string/MyVouchers" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_sync_alt_black_18dp"
            android:title="@string/LogOut" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/helpcenter"
                android:icon="@drawable/helpcenter"
                android:title="@string/HelpCenter" />
            <item
                android:id="@+id/aboutus"
                android:icon="@drawable/aboutus"
                android:title="@string/AboutUs" />
        </menu>
    </item>

</menu>
